[package]
name = "signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
hkdf = "0.12.3"
hex = "0.4.3"
sha2 = "0.10.7"
rand_core = {version = "0.6", features = ["getrandom"] }
aes = "0.8.3"
cbc = "0.1.2"
generic-array = "0.14.7"
